testsuite/poke.pkl/struct-method-diag-11.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    var n = 10;
    fun fn = int: { return n; }
    int i;
    method foo = int:
      {
        return fn + i; /* { dg-error "invalid.*function" } */
      }
  };
